<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <EditText
        android:id="@+id/numero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:hint="@string/hint_primeiro" 
        android:inputType="numberDecimal" 
        android:digits="0123456789.," >

        <requestFocus />
    </EditText>
	
    <Spinner
        android:id="@+id/spinner_op"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/operadores_array"
        android:prompt="@string/escolha_operador" />
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello2" />
    
    <EditText
		android:id="@+id/numero2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:hint="@string/hint_segundo"
		android:inputType="numberDecimal" 
        android:digits="0123456789.," />

    <Button
        android:id="@+id/btsomar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="somar"
        android:text="@string/labelSomar"  />

    
    
</LinearLayout>